# devpulse

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: CLAUDE.md  index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  monitor.rs  pty.rs  terminal.rs  tray.rs
src-tauri/src/commands/: CLAUDE.md  autofill.rs  azure.rs  bitbucket.rs  calendar.rs  claude.rs  credentials.rs  db.rs  gather.rs  git.rs  github.rs  gitlab.rs  kimai.rs  mod.rs  system.rs  uv.rs
src/components/: ActivityMapper.tsx  AppShell.tsx  BackgroundTasks.tsx  CLAUDE.md  ConnectionCard.tsx  ContributionHeatmap.tsx  EmbeddedTerminal.tsx  EventCard.tsx  InvoicePdfDocument.tsx  InvoiceProfileEditor.tsx  SetupHelpModal.tsx  Sidebar.tsx  StatusPill.tsx  ThemeProvider.tsx  ToggleSwitch.tsx  TrayPanel.tsx
src/hooks/: CLAUDE.md  useMonitorListener.ts  useSidebarOrder.ts
src/lib/: CLAUDE.md  credentials.ts  descriptionRunner.ts  fixRunner.ts  gitProvider.ts  platform.ts  reviewRunner.ts  setupGuides.tsx  tauri.ts  timezone.ts  types.ts  utils.ts
src/pages/: CLAUDE.md  ClaudeCode.tsx  Commands.tsx  Connections.tsx  Dashboard.tsx  GitActivity.tsx  History.tsx  Invoices.tsx  Onboarding.tsx  PrReview.tsx  ReportGenerator.tsx  Settings.tsx
src/stores/: CLAUDE.md  backgroundTaskStore.ts  commandStore.ts  connectionStore.ts  eventStore.ts  githubDataStore.ts  invoiceStore.ts  prReviewStore.ts  reportStore.ts  settingsStore.ts
