[package]
name = "devpulse"
version = "0.3.0"
description = "DevPulse - Development Activity Monitor"
authors = ["Eduardo"]
edition = "2021"

[lib]
name = "devpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "net", "io-util", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-os = "2"
log = "0.4"
which = "7"
dirs = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
